--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </a>
     </div>
     <div class="body">
-        <code>请输入数字</code>
+        <code>请输入整数</code>
         <input type="text" name="" id="IN">
         <br>
         <button type="button" id="button" onclick="c()">一键转换到486！<img src="486.png" id="A486"></img></button>
