--- a/index.html
+++ b/index.html
@@ -3,20 +3,69 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>486神人程序plus</title>
+    <title>486神人程序plus - By Bilibili 昴昂昴昂昴 </title>
     <link rel="shortcut icon" href="gbc_icon_03.png" type="image/x-icon" />
     <link rel="Bookmark" href="gbc_icon_03.png" type="image/x-icon">
     <link rel="stylesheet" href="css.css">
     <script src="js.js"></script>
+    
 </head>
 <body>
+    <!--
+        @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
+        @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
+        @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
+        @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%%##**+++=========+++*##%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
+        @@@@@@@@@@@@@@@@@@@@@@@@%#*+=---:::::::-----------::::--=+*#%@@@@@@@@@@@@@%####%@@@@@@@@@@@@@@@@@@@@
+        @@@@@@@@@@@@@@@@@@@%#+=--:::------------------------------:::-#@@@@@@@%*++*#%%#=-#@@@@@@@@@@@@@@@@@@
+        @@@@@@@@@@@@@@@%*+--::-------------------:::::......::::::::--:%@@@@#==*%@@@@@@@+.*@@@@@@@@@@@@@@@@@
+        @@@@@@@@@@@@#+=-:-------------------::::::::------::::::....:::=@@%==%@@@@@@@@@@@:-@@@@@@@@@@@@@@@@@
+        @@@@@@@@@%+-::-----------------::::::---------------------:::..:@*:=*+===*%@@@@@%:-@@@@@@@@@@@@@@@@@
+        @@@@@@%*-::----::----------:::::::----------------------------::-.::..:--::-*%@@=:=@@@@@@@@@@@@@@@@@
+        @@@@#=-:----:::--------:::::--:::--------::------------------::::::.:::::---:-+*-:*@@@@@@@@@@@@@@@@@
+        @@#=:----:::--------::.:::--:::-----:-=-:-----------------:..:.:----::.::::---::--@@@@@@@@@@@@@@@@@@
+        #=:---::::--------::::--:==-------:-++-:-==--:----------:-+=:..:------:.::::-::-:-#@@@@@@@@@@@@@@@@@
+        :---::::--------:.:---::+=------:-*%*:--=--=:-===-----::*@@@%+:---------:.:.::::--:+@@@@@@@@@@@@@@@@
+        --:::--------::.:---:-#+.:-::-:-*%@=.----=*--=++==+-::=%@@@@@*:-----------.:::-----:=@@@@@@@@@@@@@@@
+        ::::-------:...:----*@@+*=-*+=+%@@*:-:::+%=------+=::#@@@@@@%-----------::::.:------:-@@@@@@@@@@@@@@
+        ::-------:..:=*#%%@@@@@@@@++@@@@@@@@%#+#@*-::-----.=%@@@@@@@+:------:---:---:.:------:=@@@@@@@@@@@@@
+        -------:.:-+##*#%%##@@@@@@@+:#@@@@@@@@@@@@#+=-:::.+@@@@@@@@#:------::--------:.-------:=@@@@@@@@@@@@
+        -----:..=%+       .  .:--=#@%==%@@@@@@@@@@@@@@%*=*@@@@@@@@%-++-----:---::-----:.-------:=@@@@@@@@@@@
+        ----:.=%@@@.-%%%%#=:+**=-  .-=--+%@@@@@@@@@@@@@@@@@@@@@@@%-=+====-::---::------.:-------:*@@@@@@@@@@
+        --:.:#@@@@@*#@@@-   *@@@@@+      :+%@@@@@@@@@@@@@@@@@@@@%-:---===-.-----:------:.--------:@@@@@@@@@@
+        ::.=@@@@@@@@@@@+ :::  .. -- .::--  -=+#%%%@@@@@@@@@@@@@@%*-::---:.-=-:#-:-------:--------:+@@@@@@@@@
+        .:*@@@@@@@@@@@@#=++++:::.     .+@%+-+*=++#@@@@@@@@@@@@@@@@@#=:::::-=:*%:--------::--------:@@@@@@@@@
+        :%@@@@@@@@@@@@@@%%##***+=*@+  .%@@@@%@@@@@@@@@@@@@@@@@@@@@@@@#=-=--:*@*:------:--:--------:*@@@@@@@@
+        %@@@@@%%%%%%%%%@@@@@@%%%*+**=+@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%=::*@@=:------.--:--------:=@@@@@@@@
+        @@@@@%%%%%%%%%%%%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@+#@@%:----------:----------@@@@@@@@
+        @@@@@%%%%%%%%%%%%%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@**@@@@@@@@@@@@@@+:------=-:-:---------:%@@@@@@@
+        @@@@@@%%%%%%%%%%%%%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@#-*%@@@@@@@@@@@%-:-----:*:--:---------:%@@@@@@@
+        @@@@@@@@@%%%%%%%%%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*--=*%%@@@@@@@@%+::--:+#.--:---------:#@@@@@@@
+        @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%*-. .:+**#%@@@@@%-:--@=:-::---------:%#%@@@@@
+        @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@#=:  :+**=++**#%-.#%:--::---------:#*#@@@@@
+        @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%#@@@@@@@@@@@@@@@@@*:.=@@*. :#@@%#####*#=.--.----------:#**@@@@@
+        @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@+    -#%@#. -%@@@@@@@@=:-:.-----------+*+@@@@@
+        @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@=:-:.   =%*.  -%@@@@@@*:-..-----------+*+@@@@@
+        @@@@@@@@@@@@@@@@@@@@@@@%%%%%%@@@@@@@@@@@@@@@@@@@@@@@@@%=++- :.   .:  -@@@@@@%-:.:---------:=+*+%@@@@
+        @@@@@@@@@@@@@@@@@@######%%%%%#%@@@@@@@@@@@@@@@@@@@@@@@@%#**=:::.  ::: :%@@@@@+..------:---:*+**%@@@@
+        @@@@@@@@@@@@@@@@@@%%%@@@@@@@@@@@%#%@@@@@@@@@@@@@@@@@@@@@@@%#*+#@=  +@: .%@@@@+.------:---:=*+*+%@@@@
+        @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@##@@@@@@@@@@@@@@@@@@@@@@@@%#+*+.+@@%- -@@@#.:-----::---:**+**%@@@@
+        @@@@@@@@@@@@@@@@@@@@@@@@@@@%@@@@@@@#*@@@@@@@@@@@@@@@@@@%%%@@@@###@@@%*:  *@#::-----::----:%#**#@@@@@
+        @@@@@@@@@@@@@@@@@@@@@@@@@@%#@@@@@@@@+%@@@@@@@@@@@@@@%%%%%%%%%@@@@@@%***##@#::-----::----:=%#*#@@@@@@
+        @@@@@@@@@@@@@@@@@@@@@@@@@@%@@@@@@@@@**@@@@@@@@@@@@@@%%%%%%%%%%%@@@@@@@@@@#.:-----::----:=%**%@@@@@@@
+        @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%+@@@@@@@@@@@@@@%%%%%%%%%%%%@@@@@@@@#.:-----::----:-#@*#@@@@@@@@
+        @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%%@@@@@@@@@@@@@@@%%%%%%%%%%@@@@@@@*.:-----::------#%%*@@@@@@@@@
+        @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%%%%%%%@@@@@@@=.:----:::-----:%%@#%@@@@@@@@@
+        #@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@#:.-----:::-----:#@#@#@@@@@@@@@@
+        ##%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*..-----:::-----:*@%%%%@@@@@@@@@@
+    -->
     <div class="title-bg">
         <a href="https://space.bilibili.com/3546710720645502" target="_blank" class="aaa">
-            <h1>486神人程序plus - By Bilibili 昴昂昴昂昴 </h1>
+            <h1 id="title">&nbsp;&nbsp;&nbsp;&nbsp;486神人程序plus </h1>
         </a>
     </div>
     <div class="body">
-        <code>请输入整数</code>
+        <code>请输入整数:</code>
         <input type="text" name="" id="IN">
         <br>
         <button type="button" id="button" onclick="c()">一键转换到486！<img src="486.png" id="A486"></img></button>
